<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Card Game Pinadani</string>
    <string name="app_description">Pinadanis thesis</string>

    <string name="button_OK">OK</string>

    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="INIT_LICENSE_ERROR_MISMATCH_KEY">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>

    <string name="vuforia_key">AYhKm7n/////AAAAGahKLdo9B0CmnlKK8ivIMSUe3MMyBS8kz9SaIEbIWFdDVptCnhuBpqIhGGY6LkJj9iROhcU9t6GnMvi+cI4kQehv8nlRTdLvzGiG1G3qh7lZRKOkDQHekALQckiQgfehP6Q3pS1Hgwn1uWzVeL/aSjhwE5cQrAW+Tu23HgOzE0FxpikUs5wg0yBHTWO+GMbm27CewBY7fM/HKBDf4tINziHwEftz3pxEDbED0tzJpv0FIpN6E6Jen+e0yqYAPmPVAyjC2CwUqgSrlo/wwMrckq/rOsfEOOqWc/iW7okVLMf4Y/IbIxOjU+fwYQc5hZJV5BLyjmXyo0nK18EDDpi7VJMXfpZ+RJ6xjQum5eyz4Nv1</string>
    <string name="service_id">cz.cvut.fit.pinadani.cardgamear.service</string>

    <string name="hint_email">Email</string>
    <string name="login_hint_password">Heslo</string>
    <string name="login_button_login">Přihlásit</string>
    <string name="login_forgot_password">Zapomenuté heslo</string>
    <string name="cancel">Zrušit</string>
    <string name="text_wait">Čekejte prosím</string>
    <string name="login_fail">Chyba při přihlašování</string>
    <string name="sign_up_fail">Chyba při registraci</string>
    <string name="sign_up_success">Registrace proběhla v pořádku</string>
    <string name="reset_password_succes">Na email Vám bylo odesláno nové heslo</string>
    <string name="reset_password_fail">Chyba při obnovení hesla</string>
    <string name="valid_empty_field">Prosím vyplňte toto pole</string>
    <string name="invalid_email">Prosím zadejte správný email</string>
    <string name="invalid_email_or_password">Chybný email nebo heslo</string>
    <string name="registration">Registrace</string>
    <string name="do_registration">Registrovat</string>
    <string name="forgot_password_title">Zapomenuté heslo</string>
    <string name="valid_email_fail_email">Vyplňte prosím správný email.</string>
    <string name="valid_email_fail_empty">Zadejte prosím Váš email.</string>
    <string name="valid_password_fail_empty">Vyplňte prosím Vaše heslo.</string>
    <string name="button_reset_password">Obnovit heslo</string>
    <string name="sign_up_title">Registrace</string>
    <string name="login_success">Přihlášení proběhlo v pořádku</string>
    <string name="singleplayer">Hra jednoho hráč</string>
    <string name="muliplayer">Hra dvou hráčů</string>
    <string name="user_settings">Nastavení účtu</string>
    <string name="login">Přihlásit</string>
    <string name="logout">Odhlásit</string>
    <string name="login_fail_week_password">Špatné heslo. Heslo musí mít alespoň 6 znaků</string>
    <string name="login_fail_invalid_email">Špatně zadaný email</string>
    <string name="login_fail_invalid_password_or_email">Špatné přihlašovací údaje</string>
    <string name="sign_up_fail_check">Zkontrolujte prosím zadané údaje. Heslo musí obsahovat alespoň
        6 znaků.
    </string>
    <string name="reset_password_fail_invalid_user">Neexistující uživatel</string>
    <string name="bt_not_enabled_leaving">Bluetooth neni k dispozici</string>
    <string name="title_paired_devices">Spárovaná zařízení</string>
    <string name="title_other_devices">Další dostupná zařízení</string>
    <string name="button_scan">Najít další zařízení</string>
    <string name="none_paired">Žádné spárovaná zařízení</string>
    <string name="none_found">Žádné zařízení nebylo nalezeno</string>
    <string name="connect_bluetooth_title">Propojení hráčů</string>
    <string name="profile_name">Username</string>
    <string name="profile_email">Email *</string>
    <string name="name">Jméno</string>
    <string name="second_name">Přijímení</string>
    <string name="username">Přezdívka *</string>
    <string name="button_change_password">Změnit heslo</string>
    <string name="profile">Profil</string>
    <string name="done">Uložit</string>
    <string name="changes_saved">Změny byly uloženy</string>
    <string name="update_fail">Update fail</string>
    <string name="update_success">Změny byly uloženy</string>
    <string name="get_data_fail">Chyba při získávání dat</string>
    <string name="old_password">Staré heslo</string>
    <string name="new_password">Nové heslo</string>
    <string name="change_password_title">Změna hesla</string>
    <string name="password_update_success">Heslo bylo úspěšně změněno</string>
    <string name="password_update_fail">Při změně hesla se něco pokazilo</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="create_game">Vytvořit</string>
    <string name="connect_game">Připojit se</string>
    <string name="button_start">Start</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="paused">Paused</string>
    <string name="statisticks">Žebříček</string>
    <string name="score">Skóre</string>
    <string name="button_start_bluetooth">Udělat toto zařízení viditelné</string>
    <string name="button_connect">Propojit zařizení</string>
    <string name="settings_direction">Primární ovládání pohybu</string>
    <string name="text_settings_direction_default">Primární</string>
    <string name="text_settings_direction_alternative">Alternativní</string>
    <string name="message_no_internet">Zkontrolujte své připojení k internetu</string>
    <string name="click_for_start">start</string>
    <string name="wait_for_oponent_start">počkejte na soupeře</string>
</resources>
