<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/container_content_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:orientation="vertical"
    android:padding="@dimen/tiny_gap">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners">
        <Button
            android:id="@+id/btn_singleplayer"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/singleplayer"
            android:textColor="#213247"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners">
        <Button
            android:id="@+id/btn_multiplayer"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/muliplayer"
            android:textColor="#213247"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners">
        <Button
            android:id="@+id/btn_statistics"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/statisticks"
            android:textColor="#213247"/>
    </FrameLayout>


    <FrameLayout
        android:id="@+id/layout_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners">
        <Button
            android:id="@+id/btn_user"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/user_settings"
            android:textColor="#213247"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners">
        <Button
            android:id="@+id/btn_login_logout"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/login"
            android:textColor="#213247"/>
    </FrameLayout>

</LinearLayout>

