<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:padding="@dimen/tiny_gap">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_login"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon"/>

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_email"
                style="@style/LoginInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners_top"
                android:drawableRight="@drawable/ic_person_black"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <EditText
                android:id="@+id/edit_password"
                style="@style/LoginInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners_bottom"
                android:drawableRight="@drawable/ic_lock_open_black"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:singleLine="true"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corners">
            <Button
                android:id="@+id/btn_login"
                style="@style/LoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/login_button_login"
                android:textColor="#213247"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corners">
            <Button
                android:id="@+id/btn_registration"
                style="@style/LoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/registration"
                android:textColor="#213247"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_rounded_corners"
            android:paddingTop="@dimen/tiny_gap">

            <Button
                android:id="@+id/btn_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/login_forgot_password"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>

