<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/color_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            style="@style/ProfileEditTextLayout"
            android:layout_marginTop="40dp">
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/img_username"
                    style="@style/ProfileEditTextImage"
                    android:src="@drawable/ic_person_outline_black"/>

                <EditText
                    android:id="@+id/txt_username"
                    style="@style/ProfileEditText"
                    android:layout_toEndOf="@+id/img_username"
                    android:layout_toLeftOf="@+id/img_edit_username"
                    android:layout_toRightOf="@+id/img_username"
                    android:layout_toStartOf="@+id/img_edit_username"
                    android:hint="@string/username"/>

                <ImageView
                    android:id="@+id/img_edit_username"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    android:paddingEnd="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingStart="12dp"
                    android:src="@drawable/ic_mode_edit"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/ProfileEditTextLayout"
            android:layout_marginTop="20dp">
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/img_email"
                    style="@style/ProfileEditTextImage"
                    android:src="@drawable/ic_email_black"/>

                <EditText
                    android:id="@+id/txt_email"
                    style="@style/ProfileEditText"
                    android:layout_toEndOf="@+id/img_email"
                    android:layout_toLeftOf="@+id/img_edit_email"
                    android:layout_toRightOf="@+id/img_email"
                    android:layout_toStartOf="@+id/img_edit_email"
                    android:hint="@string/profile_email"
                    android:inputType="textEmailAddress"/>

                <ImageView
                    android:id="@+id/img_edit_email"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    android:paddingEnd="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingStart="12dp"
                    android:src="@drawable/ic_mode_edit"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/ProfileEditTextLayout"
            android:layout_marginTop="20dp">
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/img_name"
                    style="@style/ProfileEditTextImage"
                    android:src="@drawable/ic_person_black"/>

                <EditText
                    android:id="@+id/txt_name"
                    style="@style/ProfileEditText"
                    android:layout_toEndOf="@+id/img_name"
                    android:layout_toLeftOf="@+id/img_edit_name"
                    android:layout_toRightOf="@+id/img_name"
                    android:layout_toStartOf="@+id/img_edit_name"
                    android:hint="@string/name"/>

                <ImageView
                    android:id="@+id/img_edit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    android:paddingEnd="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingStart="12dp"
                    android:src="@drawable/ic_mode_edit"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout style="@style/ProfileEditTextLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="48dp">
            <ImageView
                android:id="@+id/img_direction"
                style="@style/ProfileEditTextImageWhite"
                android:src="@drawable/ic_directions"
                android:layout_centerVertical="true"/>

            <TextView
                style="@style/ProfileEditText"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/img_direction"
                android:layout_toRightOf="@+id/img_direction"
                android:text="@string/settings_direction"
                android:textColor="@android:color/white"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/direction_checkox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:checked="true"
                android:buttonTint="@android:color/white"/>
        </RelativeLayout>

        <FrameLayout
            style="@style/ProfileEditTextLayout"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/rounded_corners">
            <Button
                android:id="@+id/btn_change_password"
                style="@style/LoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/button_change_password"
                android:textAllCaps="false"
                android:textColor="#213247"
                android:textSize="17sp"/>
        </FrameLayout>

    </LinearLayout>


</ScrollView>